Schema und Layout für Doku

--- a/doc/circuit.tex
+++ b/doc/circuit.tex
@@ -2,12 +2,12 @@
 
 \section{Schaltung}
 
-\subsection{Variante 1}
+\subsection{Schema}
 \begin{figure}[h!]
 	\centering
-	\includegraphics[scale=\schscale]{fig/xlr_pegelwandler_01_sch_var1.pdf}
-	\caption{Variante 1}
-	\label{sch:var1}
+	\includegraphics[scale=\schscale]{fig/xlr_pegelwandler_v_1_1_sch.pdf}
+	\caption{Schema}
+	\label{sch:pegw}
 \end{figure}
 
 \subsection{Funktion}
@@ -22,22 +22,10 @@ I_\sw = 20 mA\\
 \Rightarrow R101 = \frac{6.6V}{20mA} = 330 \Ohm
 \end{matrix} \]
 
-
-% \subsection{Variante 2}
-% \begin{figure}[h!]
-% 	\centering
-% 	\includegraphics[scale=\schscale]{fig/xlr_pegelwandler_01_sch_var1.pdf}
-% 	\caption{Variante 2}
-% 	\label{sch:var2}
-% \end{figure}
-
-% \subsection{Funktion}
-% Durch Drücken des Tasters wird V201 leitend. Dadurch wird das Ausgangssignal Low. Wird der Taster wieder losgelassen, sperrt V201 und R203 zieht das Ausgangssignal zur Betriebsspannung des Controllers. 
-
-% \subsection{Dimensionierung}
-% \[ \begin{matrix} R101 = \frac{U_B}{I_{sw}}\\
-% U_B = 6.6 V\\
-% I_\sw = 20 mA\\
-% \Rightarrow R101 = \frac{6.6V}{20mA} = 330 \Ohm
-% \end{matrix} \]
-
+\subsection{Layout}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=\schscale]{fig/xlr_pegelwandler_v_1_1_lay_transp.pdf}
+	\caption{Layout}
+	\label{lay:pegw}
+\end{figure}
