--- a/doc/circuit.tex
+++ b/doc/circuit.tex
@@ -18,8 +18,8 @@ Aufgrund des geringeren Schaltungsaufwandes von Variante 2 wird mit dieser weite
 \subsubsection{Dimensionierung}
 \[ \begin{matrix} R101 = \frac{U_B}{I_{sw}}\\
 U_B = 6.6 V\\
-I_\sw = 20 mA\\
-\Rightarrow R101 = \frac{6.6V}{20mA} = 330 \Ohm
+I_{sw} = 20 mA\\
+\Rightarrow R101 = \frac{6.6V}{20mA} = 330 \Omega
 \end{matrix} \]
 
 \subsection{Layout}
