Schema und Layout in Dok aktualisiert

--- a/doc/xlr_pegelwandler_layout.sty
+++ b/doc/xlr_pegelwandler_layout.sty
@@ -85,6 +85,7 @@
   
 \newcommand{\schscale}{0.5}
 \newcommand{\schscalesmall}{0.35}
+\newcommand{\layscale}{0.25}
 
 \DeclareMathOperator{\arccot}{arccot}
 
