--- a/doc/circuit.tex
+++ b/doc/circuit.tex
@@ -5,7 +5,7 @@
 \subsection{Schema}
 \begin{figure}[h!]
 	\centering
-	\includegraphics[scale=\schscale]{fig/xlr_pegelwandler_v_1_1_sch.pdf}
+	\includegraphics[scale=\schscale]{fig/xlr_pegelwandler_v_1_2_sch.pdf}
 	\caption{Schema}
 	\label{sch:pegw}
 \end{figure}
@@ -16,16 +16,16 @@ Die beiden Kanäle sind identisch aufgebaut. Nachfolgend wird die Funktionsweise
 Aufgrund des geringeren Schaltungsaufwandes von Variante 2 wird mit dieser weiter verfahren. 
 
 \subsubsection{Dimensionierung}
-\[ \begin{matrix} R101 = \frac{U_B}{I_{sw}}\\
+\[ \begin{array}{l} R101 = \frac{U_B}{I_{sw}}\\
 U_B = 6.6 V\\
 I_{sw} = 20 mA\\
-\Rightarrow R101 = \frac{6.6V}{20mA} = 330 \Omega
-\end{matrix} \]
+\Rightarrow R101 = \frac{6.6V}{20mA} = \underline{\underline{330 \Omega}}
+\end{array} \]
 
 \subsection{Layout}
 \begin{figure}[h!]
 	\centering
-	\includegraphics[scale=\schscale]{fig/xlr_pegelwandler_v_1_1_lay_transp.pdf}
+	\includegraphics[scale=\layscale]{fig/xlr_pegelwandler_v_1_2_lay_transp.pdf}
 	\caption{Layout}
 	\label{lay:pegw}
 \end{figure}
