--- a/doc/circuit.tex
+++ b/doc/circuit.tex
@@ -2,6 +2,18 @@
 
 \section{Schaltung}
 
+\subsection{Anforderungen}
+Es soll eine Schaltung entwickelt werden, mit welcher ein Taster ausgewertet werden kann. 
+
+\begin{table}[h!]
+  \begin{tabular}{@{}ll}
+    \textbf{Anforderung}  & \textbf{Wert} \\
+    Akkuspannung          & 6.6 V \\
+    Ausgangsspannung      & 5 V \\
+    Schalterstrom         & 20 mA
+  \end{tabular}
+\end{table}
+
 \subsection{Schema}
 \begin{figure}[h!]
 	\centering
