Anforderungen verbessert / .gitignore update

--- a/doc/circuit.tex
+++ b/doc/circuit.tex
@@ -9,7 +9,7 @@ Es soll eine Schaltung entwickelt werden, mit welcher zwei Taster ausgewertet we
   \begin{tabular}{@{}ll}
     \textbf{Anforderung}        & \textbf{Wert} \\
     Schalterstrom               & $20 mA$ \\
-    Ausgangsstrom               & $0.5 mA$ \\
+    Ausgangsstrom               & $0.2 mA$ \\
     Akku                        & 2S LiFePO4 \\
     $\rightarrow U_{B_{min}}$   & $7.3 V$ \\
     $\rightarrow U_{B_{max}}$   & $5 V$ \\
@@ -43,7 +43,7 @@ P_{R101} = \frac{{U_{R101}}^2}{R101} = \frac{{U_{Bat_{max}}}^2}{R101} = \frac{7.
 \end{array} \]
 %
 \[ \begin{array}{l}
-R104 = \frac{5 V - U_{O_H}}{I_O} = \frac{5 V - 4.? V}{0.5 mA} = 
+R104 = \frac{5 V - U_{O_H}}{I_O} = \frac{5 V - 3 V}{0.5 mA} = 
 \end{array} \]
 
 \subsection{Layout}
