--- a/doc/circuit.tex
+++ b/doc/circuit.tex
@@ -86,10 +86,11 @@ I_{C_{V101}}
 = 212.42 \mu A \\\\
 I_{B_{V101}} 
 = \dfrac{212.42 \mu A \cdot 3}{125} 
-= 0.298 \mu A \\\\
+= 5.098 \mu A \\\\
 R102_{max} 
 = \dfrac{5 V - 0.7 V}{0.298 \mu A} 
-= 14.4 M \Omega
+= 843.4 k \Omega 
+\rightarrow \underline{\underline{820 k \Omega}}
 \end{array} \]
 
 \subsection{Layout}
