--- a/doc/circuit.tex
+++ b/doc/circuit.tex
@@ -3,7 +3,7 @@
 \section{Schaltung}
 
 \subsection{Anforderungen}
-Es soll eine Schaltung entwickelt werden, mit welcher zwei Taster ausgewertet werden können. Da die Schalter über lange Kabel mit der Elektronik verbunden sind, soll durch diese ein relativ hoher Strom fliessen, um Störungen zu vermeiden. 
+Es soll eine Schaltung entwickelt werden, mit welcher zwei Taster ausgewertet werden können, welche mit einem XLR-Stecker verbunden werden. Da die Schalter über lange Kabel mit der Elektronik verbunden sind, soll durch diese ein relativ hoher Strom fliessen, um Störungen zu vermeiden. 
 
 \begin{table}[h!]
   \begin{tabular}{@{}ll}
@@ -94,6 +94,7 @@ R102_{max}
 \end{array} \]
 
 \subsection{Layout}
+
 \begin{figure}[h!]
 	\centering
 	\includegraphics[scale=\layscale]{fig/xlr_pegelwandler_v_1_2_lay_transp.pdf}
