--- a/doc/layout.tex
+++ b/doc/layout.tex
@@ -1,7 +1,7 @@
 % coding:utf-8
 
 \section{Layout}
-Die Platine wird direkt an den XLR-Stecker vom Typ NC3MD-V von Neutrik angelötet. Die Verbindung zu einem Arduino erfolgt über eine Steckerleiste. Alle übrigen Bauteile sind in SMD mit der Baugrösse 0805 bzw. 1206 ausgeführt. Die Grösse der Platine ist auf den Steckverbinder angepasst, so dass dieser mit der angelöteten Platine montiert werden kann. 
+Die Platine wird direkt an den XLR-Stecker vom Typ NC3MD-V von Neutrik angelÃ¶tet. Die Verbindung zu einem Arduino erfolgt Ã¼ber eine Steckerleiste. Alle Ã¼brigen Bauteile sind in SMD mit der BaugrÃ¶sse 0805 bzw. 1206 ausgefÃ¼hrt. Die GrÃ¶sse der Platine ist auf den Steckverbinder angepasst, so dass dieser mit der angelÃ¶teten Platine montiert werden kann. 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[scale=\layscale]{fig/xlr_pegelwandler_v_1_2_lay_transp.pdf}
