--- a/doc/bom.tex
+++ b/doc/bom.tex
@@ -4,8 +4,7 @@
 \begin{table}[h!]
   \begin{tabular}{@{}lllll}
     Anzahl  & Bezeichnung & Bestellnummer & Einzelpreis & Gesamtpreis \\
-    \lbrack Stk \rbrack && (Distrelec) & \lbrack Fr. \rbrack & \lbrack Fr. \rbrack \\
-    %
+    \lbrack Stk\rbrack && (Distrelec) & \lbrack Fr.\rbrack & \lbrack Fr.\rbrack \\
     \rowcolor{white}
     1 & Neutrik NC3MD-V               & 15 98 55 & 8.30 & 8.30 \\
     \rowcolor{lgray}
@@ -35,6 +34,7 @@
     \rowcolor{lgray}
     2 & Mutter M3                     & 34 82 75 & 0.153& 0.306\\
     \rowcolor{white}
-    2 & Fächerscheibe für M3          & 34 82 48 & 0.098& 0.196
+    2 & Fächerscheibe für M3          & 34 82 48 & 0.098& 0.196\\\\
+      & Total                         &          &      & ??.??
   \end{tabular}
 \end{table}
