--- a/doc/bom.tex
+++ b/doc/bom.tex
@@ -5,6 +5,8 @@
   \begin{tabular}{@{}lllll}
     Anzahl  & Bezeichnung & Bestellnummer & Einzelpreis & Gesamtpreis \\
     \lbrack Stk\rbrack && (Distrelec) & \lbrack Fr.\rbrack & \lbrack Fr.\rbrack \\
+    \rowcolor{lgray}
+    1 & Platine                       &          & 4.536& 4.536\\
     \rowcolor{white}
     1 & Neutrik NC3MD-V               & 15 98 55 & 8.30 & 8.30 \\
     \rowcolor{lgray}
@@ -38,3 +40,46 @@
       & Total                         &          &      & ??.??
   \end{tabular}
 \end{table}
+
+%\subsection{Bestellliste für zwei Platinen}
+% \begin{table}[h!]
+%   \begin{tabular}{@{}lllll}
+%     Anzahl  & Bezeichnung & Bestellnummer & Einzelpreis & Gesamtpreis \\
+%     \lbrack Stk\rbrack && (Distrelec) & \lbrack Fr.\rbrack & \lbrack Fr.\rbrack \\
+%     \rowcolor{lwhite}
+%     1 & Gehäuse                       &          & ?.?? & ?.?? \\
+%     \rowcolor{lgray}
+%     2 & Platinen                      &          & 4.536& 9.072\\
+%     \rowcolor{white}
+%     2 & Neutrik NC3MD-V               & 15 98 55 & 8.30 &16.60 \\
+%     \rowcolor{lgray}
+%     5 & BC847A                        & 61 03 79 & 0.29 & 1.45 \\
+%     \rowcolor{white}
+%     5 & BC857A                        & 61 15 88 & 0.27 & 1.35 \\
+%     \rowcolor{lgray}
+%     5 & Widerstand 330 $\Omega$ 1206  & 71 12 86 & 0.089& 0.445\\
+%     \rowcolor{white}
+%     5 & Widerstand 10 k$\Omega$ 0805  & 71 33 18 & 0.069& 0.345\\
+%     \rowcolor{lgray}
+%     5 & Widerstand 24 k$\Omega$ 0805  & 71 33 27 & 0.069& 0.345\\
+%     \rowcolor{white}
+%     5 & Widerstand 330 k$\Omega$ 0805 & 71 33 54 & 0.069& 0.345\\
+%     \rowcolor{lgray}
+%     5 & Widerstand 820 k$\Omega$ 0805 & 71 33 64 & 0.069& 0.345\\
+%     \rowcolor{white}
+%     5 & Kondensator 100 nF 0805       & 83 14 69 & 0.15 & 0.75 \\
+%     \rowcolor{lgray}
+%     2 & Stiftleiste Dubox 5p Pol      & 11 67 33 & 1.70 & 3.40 \\
+%     \rowcolor{white}
+%     2 & Buchsengehäuse Dubox 5 Pol    & 11 67 03 & 1.10 & 2.20 \\
+%     \rowcolor{lgray}
+%     15& Crimpkontakt Dubox            & 11 67 29 & 0.70 &10.50 \\
+%     \rowcolor{white}
+%     4 & Senkkopfschraube M3 x ??      & 34 32 3? & ?.?? & ?.?? \\
+%     \rowcolor{lgray}
+%     4 & Mutter M3                     & 34 82 75 & 0.153& 0.612\\
+%     \rowcolor{white}
+%     4 & Fächerscheibe für M3          & 34 82 48 & 0.098& 0.392\\\\
+%       & Total                         &          &      & ??.??
+%   \end{tabular}
+% \end{table}
