Bestellliste automatisch berechnen begonnen

--- a/doc/xlr_pegelwandler_layout.sty
+++ b/doc/xlr_pegelwandler_layout.sty
@@ -40,6 +40,7 @@
 \usetikzlibrary{circuits.ee.IEC}
 \usetikzlibrary{circuits.logic.IEC}
 \usepackage{venndiagram}
+\usepackage{spreadtab}
 
 \usepackage{color}
 \usepackage{colortbl}
