Stückliste mit gerundeten Werten

--- a/doc/bom.tex
+++ b/doc/bom.tex
@@ -1,47 +1,47 @@
 % coding:utf-8
 
 \section{Stückliste}
-\begin{table}[h!]
-  \begin{tabular}{@{}lllll}
-    Anzahl  & Bezeichnung & Bestellnummer & Einzelpreis & Gesamtpreis \\
-    \lbrack Stk\rbrack && (Distrelec) & \lbrack Fr.\rbrack & \lbrack Fr.\rbrack \\
-    \rowcolor{lgray}
-    1 & Platine                       &          & 4.536& 4.536\\
-    \rowcolor{white}
-    1 & Neutrik NC3MD-V               & 15 98 55 & 8.30 & 8.30 \\
-    \rowcolor{lgray}
-    2 & BC847A                        & 61 03 79 & 0.29 & 0.58 \\
-    \rowcolor{white}
-    2 & BC857A                        & 61 15 88 & 0.27 & 0.54 \\
-    \rowcolor{lgray}
-    2 & Widerstand 330 $\Omega$ 1206  & 71 12 86 & 0.089& 0.178\\
-    \rowcolor{white}
-    2 & Widerstand 10 k$\Omega$ 0805  & 71 33 18 & 0.069& 0.138\\
-    \rowcolor{lgray}
-    2 & Widerstand 24 k$\Omega$ 0805  & 71 33 27 & 0.069& 0.138\\
-    \rowcolor{white}
-    2 & Widerstand 330 k$\Omega$ 0805 & 71 33 54 & 0.069& 0.138\\
-    \rowcolor{lgray}
-    2 & Widerstand 820 k$\Omega$ 0805 & 71 33 64 & 0.069& 0.138\\
-    \rowcolor{white}
-    2 & Kondensator 100 nF 0805       & 83 14 69 & 0.15 & 0.30 \\
-    \rowcolor{lgray}
-    1 & Stiftleiste Dubox 5p Pol      & 11 67 33 & 1.70 & 1.70 \\
-    \rowcolor{white}
-    1 & Buchsengehäuse Dubox 5 Pol    & 11 67 03 & 1.10 & 1.10 \\
-    \rowcolor{lgray}
-    5 & Crimpkontakt Dubox            & 11 67 29 & 0.70 & 3.50 \\
-    \rowcolor{white}
-    2 & Senkkopfschraube M3 x ??      & 34 32 3? & ?.?? & ?.?? \\
-    \rowcolor{lgray}
-    2 & Mutter M3                     & 34 82 75 & 0.153& 0.306\\
-    \rowcolor{white}
-    2 & Fächerscheibe für M3          & 34 82 48 & 0.098& 0.196\\\\
-      & Total                         &          &      & ??.??
-  \end{tabular}
-\end{table}
+% \begin{table}[h!]
+%   \begin{tabular}{@{}lllll}
+%     Anzahl  & Bezeichnung & Bestellnummer & Einzelpreis & Gesamtpreis \\
+%     \lbrack Stk\rbrack && (Distrelec) & \lbrack Fr.\rbrack & \lbrack Fr.\rbrack \\
+%     \rowcolor{lgray}
+%     1 & Platine                       &          & 4.536& 4.536\\
+%     \rowcolor{white}
+%     1 & Neutrik NC3MD-V               & 15 98 55 & 8.30 & 8.30 \\
+%     \rowcolor{lgray}
+%     2 & BC847A                        & 61 03 79 & 0.29 & 0.58 \\
+%     \rowcolor{white}
+%     2 & BC857A                        & 61 15 88 & 0.27 & 0.54 \\
+%     \rowcolor{lgray}
+%     2 & Widerstand 330 $\Omega$ 1206  & 71 12 86 & 0.089& 0.178\\
+%     \rowcolor{white}
+%     2 & Widerstand 10 k$\Omega$ 0805  & 71 33 18 & 0.069& 0.138\\
+%     \rowcolor{lgray}
+%     2 & Widerstand 24 k$\Omega$ 0805  & 71 33 27 & 0.069& 0.138\\
+%     \rowcolor{white}
+%     2 & Widerstand 330 k$\Omega$ 0805 & 71 33 54 & 0.069& 0.138\\
+%     \rowcolor{lgray}
+%     2 & Widerstand 820 k$\Omega$ 0805 & 71 33 64 & 0.069& 0.138\\
+%     \rowcolor{white}
+%     2 & Kondensator 100 nF 0805       & 83 14 69 & 0.15 & 0.30 \\
+%     \rowcolor{lgray}
+%     1 & Stiftleiste Dubox 5p Pol      & 11 67 33 & 1.70 & 1.70 \\
+%     \rowcolor{white}
+%     1 & Buchsengehäuse Dubox 5 Pol    & 11 67 03 & 1.10 & 1.10 \\
+%     \rowcolor{lgray}
+%     5 & Crimpkontakt Dubox            & 11 67 29 & 0.70 & 3.50 \\
+%     \rowcolor{white}
+%     2 & Senkkopfschraube M3 x ??      & 34 32 3? & ?.?? & ?.?? \\
+%     \rowcolor{lgray}
+%     2 & Mutter M3                     & 34 82 75 & 0.153& 0.306\\
+%     \rowcolor{white}
+%     2 & Fächerscheibe für M3          & 34 82 48 & 0.098& 0.196\\\\
+%       & Total                         &          &      & ??.??
+%   \end{tabular}
+% \end{table}
 
-\nprounddigits2
+\STautoround*{2}
 \begin{table}[h!]
   \begin{spreadtab}{{tabular}{@{}l@{}lllll}}
     @ & @ Anzahl  & @ Bezeichnung & @ Bestellnummer & @ Einzelpreis & @ Gesamtpreis \\
