--- a/doc/bom.tex
+++ b/doc/bom.tex
@@ -68,7 +68,7 @@ Komponenten des Gerätes ausgesucht werden.
 \subsection{Stückliste für gesamtes Gerät}
 Diese Stückliste ist die Empfehlung für die Bestellung. 
 Dabei sind Reserven für SMD-Bauteile und die Crimpkontakte berücksichtigt. \\
-Auch in dieser Stückliste ist das Gehäuse nur ein Vorschlage, da die benötigten 
+Auch in dieser Stückliste ist das Gehäuse nur ein Vorschlag, da die benötigten 
 Abmessungen nicht bekannt sind. 
 \STautoround*{2}
 \begin{table}[h!]
