--- a/doc/bom.tex
+++ b/doc/bom.tex
@@ -30,46 +30,46 @@
   \end{spreadtab}
 \end{table}
 
-\newpage
-\subsection{Stückliste für gesamtes Gerät}
-Die nachfolgende Stückliste zeigt nur die Mindestmenge für ein Gerät. 
-Dabei sind noch keine Reserven eingerechnet. \\
-Das Gehäuse ist nur ein Vorschlag. Es muss anhand der Grösse der restlichen 
-Komponenten des Gerätes ausgesucht werden. 
-\STautoround*{2}
-\begin{table}[h!]
-  \begin{spreadtab}{{tabular}{@{}l@{}lllrr}}
-    @ & @ Anzahl  & @ Bezeichnung & @ Bestellnummer & @ Einzelpreis & @ Gesamtpreis \\
-    @ & @ \lbrack Stk\rbrack && @ (Distrelec) & @ \lbrack Fr.\rbrack & @ \lbrack Fr.\rbrack \\
-    @ \rowcolor{lgray} & 1 & @ Gehäuse Fibox ABS100/75 LT    & @ 30 29 93 & 12.10& \STcopy{v}{b3*[-1,0]}\\
-    @ \rowcolor{white} & 2 & @ Platine                       & @          & 4.536&  \\
-    @ \rowcolor{lgray} & 2 & @ Neutrik NC3MD-V               & @ 15 98 55 & 8.30 &  \\
-    @ \rowcolor{white} & 4 & @ BC847A                        & @ 61 03 79 & 0.29 &  \\
-    @ \rowcolor{lgray} & 4 & @ BC857A                        & @ 61 15 88 & 0.27 &  \\
-    @ \rowcolor{white} & 4 & @ Widerstand 330 $\Omega$ 1206  & @ 71 12 86 & 0.089&  \\
-    @ \rowcolor{lgray} & 4 & @ Widerstand 10 k$\Omega$ 0805  & @ 71 33 18 & 0.069&  \\
-    @ \rowcolor{white} & 4 & @ Widerstand 24 k$\Omega$ 0805  & @ 71 33 27 & 0.069&  \\
-    @ \rowcolor{lgray} & 4 & @ Widerstand 330 k$\Omega$ 0805 & @ 71 33 54 & 0.069&  \\
-    @ \rowcolor{white} & 4 & @ Widerstand 820 k$\Omega$ 0805 & @ 71 33 64 & 0.069&  \\
-    @ \rowcolor{lgray} & 4 & @ Kondensator 100 nF 0805       & @ 83 14 69 & 0.15 &  \\
-    @ \rowcolor{white} & 2 & @ Stiftleiste Dubox 5p Pol      & @ 11 67 33 & 1.70 &  \\
-    @ \rowcolor{lgray} & 2 & @ Buchsengehäuse Dubox 5 Pol    & @ 11 67 03 & 1.10 &  \\
-    @ \rowcolor{white} &10 & @ Crimpkontakt Dubox            & @ 11 67 29 & 0.70 &  \\
-    @ \rowcolor{lgray} & 4 & @ Senkkopfschraube M3 x 12      & @ 34 32 38 & 0.185 &  \\
-    @ \rowcolor{white} & 4 & @ Mutter M3                     & @ 34 82 75 & 0.153&  \\
-    @ \rowcolor{lgray} & 4 & @ Fächerscheibe für M3          & @ 34 82 48 & 0.098&  \\&&&&\\
-    @ \rowcolor{white} &   & @ Total                         & @          &      & :={sum(f3:[0,-2])}\\
-    \cline{6-6}
-    \cline{6-6}
-  \end{spreadtab}
-\end{table}
+% \newpage
+% \subsection{Stückliste für gesamtes Gerät}
+% Die nachfolgende Stückliste zeigt nur die Mindestmenge für ein Gerät. 
+% Dabei sind noch keine Reserven eingerechnet. \\
+% Das Gehäuse ist nur ein Vorschlag. Es muss anhand der Grösse der restlichen 
+% Komponenten des Gerätes ausgesucht werden. 
+% \STautoround*{2}
+% \begin{table}[h!]
+%   \begin{spreadtab}{{tabular}{@{}l@{}lllrr}}
+%     @ & @ Anzahl  & @ Bezeichnung & @ Bestellnummer & @ Einzelpreis & @ Gesamtpreis \\
+%     @ & @ \lbrack Stk\rbrack && @ (Distrelec) & @ \lbrack Fr.\rbrack & @ \lbrack Fr.\rbrack \\
+%     @ \rowcolor{lgray} & 1 & @ Gehäuse Fibox ABS100/75 LT    & @ 30 29 93 & 12.10& \STcopy{v}{b3*[-1,0]}\\
+%     @ \rowcolor{white} & 2 & @ Platine                       & @          & 4.536&  \\
+%     @ \rowcolor{lgray} & 2 & @ Neutrik NC3MD-V               & @ 15 98 55 & 8.30 &  \\
+%     @ \rowcolor{white} & 4 & @ BC847A                        & @ 61 03 79 & 0.29 &  \\
+%     @ \rowcolor{lgray} & 4 & @ BC857A                        & @ 61 15 88 & 0.27 &  \\
+%     @ \rowcolor{white} & 4 & @ Widerstand 330 $\Omega$ 1206  & @ 71 12 86 & 0.089&  \\
+%     @ \rowcolor{lgray} & 4 & @ Widerstand 10 k$\Omega$ 0805  & @ 71 33 18 & 0.069&  \\
+%     @ \rowcolor{white} & 4 & @ Widerstand 24 k$\Omega$ 0805  & @ 71 33 27 & 0.069&  \\
+%     @ \rowcolor{lgray} & 4 & @ Widerstand 330 k$\Omega$ 0805 & @ 71 33 54 & 0.069&  \\
+%     @ \rowcolor{white} & 4 & @ Widerstand 820 k$\Omega$ 0805 & @ 71 33 64 & 0.069&  \\
+%     @ \rowcolor{lgray} & 4 & @ Kondensator 100 nF 0805       & @ 83 14 69 & 0.15 &  \\
+%     @ \rowcolor{white} & 2 & @ Stiftleiste Dubox 5p Pol      & @ 11 67 33 & 1.70 &  \\
+%     @ \rowcolor{lgray} & 2 & @ Buchsengehäuse Dubox 5 Pol    & @ 11 67 03 & 1.10 &  \\
+%     @ \rowcolor{white} &10 & @ Crimpkontakt Dubox            & @ 11 67 29 & 0.70 &  \\
+%     @ \rowcolor{lgray} & 4 & @ Senkkopfschraube M3 x 12      & @ 34 32 38 & 0.185 &  \\
+%     @ \rowcolor{white} & 4 & @ Mutter M3                     & @ 34 82 75 & 0.153&  \\
+%     @ \rowcolor{lgray} & 4 & @ Fächerscheibe für M3          & @ 34 82 48 & 0.098&  \\&&&&\\
+%     @ \rowcolor{white} &   & @ Total                         & @          &      & :={sum(f3:[0,-2])}\\
+%     \cline{6-6}
+%     \cline{6-6}
+%   \end{spreadtab}
+% \end{table}
 
 \newpage
 \subsection{Stückliste für gesamtes Gerät}
-Diese Stückliste ist die Empfehlung für die Bestellung. 
-Dabei sind Reserven für SMD-Bauteile und die Crimpkontakte berücksichtigt. \\
-Auch in dieser Stückliste ist das Gehäuse nur ein Vorschlag, da die benötigten 
-Abmessungen nicht bekannt sind. 
+% Diese Stückliste ist die Empfehlung für die Bestellung. 
+% Dabei sind Reserven für SMD-Bauteile und die Crimpkontakte berücksichtigt. \\
+% Auch in dieser Stückliste ist das Gehäuse nur ein Vorschlag, da die benötigten 
+% Abmessungen nicht bekannt sind. 
 \STautoround*{2}
 \begin{table}[h!]
   \begin{spreadtab}{{tabular}{@{}l@{}lllrr}}
