Schema in \subsection

--- a/doc/circuit.tex
+++ b/doc/circuit.tex
@@ -2,7 +2,7 @@
 
 \section{Schaltung}
 
-\section{Schema}
+\subsection{Schema}
 \begin{figure}[h!]
 	\centering
 	\includegraphics[scale=\schscale]{fig/xlr_pegelwandler_v_1_2_sch.pdf}
