--- a/doc/requirements.tex
+++ b/doc/requirements.tex
@@ -1,7 +1,10 @@
 % coding:utf-8
 
 \section{Anforderungen}
-Es soll eine Schaltung entwickelt werden, mit welcher zwei Taster ausgewertet werden können, welche mit einem XLR-Stecker verbunden werden. Da die Schalter über lange Kabel mit der Elektronik verbunden sind, soll durch diese ein relativ hoher Strom fliessen, um Störungen zu vermeiden. 
+Es soll eine Schaltung entwickelt werden, mit welcher zwei Taster ausgewertet 
+werden können, welche mit einem XLR-Stecker verbunden werden. Da die Schalter 
+über lange Kabel mit der Elektronik verbunden sind, soll durch diese ein 
+relativ hoher Strom fliessen, um Störungen zu vermeiden. 
 
 \begin{table}[h!]
   \begin{tabular}{@{}ll}
