--- a/doc/requirements.tex
+++ b/doc/requirements.tex
@@ -4,7 +4,8 @@
 Es soll eine Schaltung entwickelt werden, mit welcher zwei Taster ausgewertet 
 werden können, welche mit einem XLR-Stecker verbunden werden. Da die Schalter 
 über lange Kabel mit der Elektronik verbunden sind, soll durch diese ein 
-relativ hoher Strom fliessen, um Störungen zu vermeiden. 
+relativ hoher Strom fliessen, um Störungen zu unterdrücken. Dieser Strom darf 
+aber die Versorgungsspannung des Mikrocontrollers nicht belasten. 
 
 \begin{table}[h!]
   \begin{tabular}{@{}ll}
